--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment2_API</title>
-    <link rel="stylesheet" href="/style.css" />
+    <title>Assignment3</title>
+    <link rel="stylesheet" href="/styles/style.css" />
+    <!-- FAVICON -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <style>
       .info_container {
         display: grid;
@@ -89,6 +91,7 @@
       <a href="/index.html" id="Homepage"> Home </a>
       <a href="/search.html" id="Searchpage"> Search </a>
       <a href="/timeline.html" id="Historypage"> History </a>
+      <a href="/shoppingcart.html" id="Historypage">Cart</a>
     </nav>
 
     <div class="info_container">
@@ -158,8 +161,8 @@
         </div>
       </div>
     </div>
+    <footer>
+      <h5>Copyright © Adam Website 2022</h5>
+    </footer>
   </body>
-  <footer>
-    <h5>Copyright © Adam Website 2022</h5>
-  </footer>
 </html>
