--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -91,7 +91,7 @@
     </header>
 
     <nav>
-        <a href="/index.html">
+        <a href="/home.html">
             Home
         </a>
         <a href="/search.html">
