--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -91,16 +91,16 @@
     </header>
 
     <nav>
-        <a href="/home.html">
+        <a href="/home" id="Homepage">
             Home
         </a>
-        <a href="/search.html">
+        <a href="/search" id="Searchpage">
             Search
         </a>
-        <a href="/timeline.html" id="Historypage">
-            History
+        <a href="/timeline" id="Historypage">
+            Account
         </a>
-        <a href="/shoppingcart.html">
+        <a href="/shoppingcart">
             Cart
         </a>
     </nav>
