--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="/styles/home.css">
   </head>
   <body>
 
@@ -55,7 +55,7 @@
             </div>
 
             <div id="signup">
-                Don't have an account? <a href="./register.html">Create account</a>
+                Don't have an account? <a href="/register">Create account</a>
             </div>
 
         </form>
