--- a/views/register.ejs
+++ b/views/register.ejs
@@ -27,14 +27,14 @@
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="/styles/home.css" />
   </head>
   <body>
     <!-- SINGUP FORM -->
     <div class="login_form">
       <form
         class="needs-validation"
-        action="/register"
+        action="register"
         method="POST"
       >
         <div class="form-title mb-3">
@@ -112,7 +112,7 @@
         <br />
 
         <div id="login">
-          Already have an account?<a href="./index.html"> Sign in</a>
+          Already have an account?<a href="/login"> Sign in</a>
         </div>
       </form>
     </div>
