--- a/views/search.ejs
+++ b/views/search.ejs
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./scripts/search.js"></script>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <script src="/scripts/search.js"></script>
+    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
     <style>
         #search {
@@ -96,18 +96,22 @@
     </header>
 
     <nav>
-        <a href="./home.html" id="Homepage">
+        <a href="/home" id="Homepage">
             Home
         </a>
-        <a href="/search.html" id="Searchpage">
+        <a href="/search" id="Searchpage">
             Search
         </a>
-        <a href="/timeline.html" id="Historypage">
+        <a href="/timeline" id="Historypage">
             Account
         </a>
-        <a href="/shoppingcart.html">
+        <a href="/shoppingcart">
             Cart
         </a>
+        <a href="/logout">
+            Logout
+        </a>
+
     </nav>
 
     <div class="filter_container">
