--- a/views/shoppingcart.ejs
+++ b/views/shoppingcart.ejs
@@ -55,17 +55,27 @@
             <th>Price(CAD)</th>
             <th>Quantity</th>
             <th>Subtotal</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
           <% cartItems.forEach(item => { %>
-          <tr>
+          <tr class="cart-items">
             <th></th>
             <th id="id<%=item.id %>"><%=item.id %></th>
             <th><%=item.price %></th>
             <th><%=item.quantity %></th>
             <th class="cart-sub">
               <%=Number(item.quantity) * Number(item.price) %>
+            </th>
+            <th>
+              <input
+                type="button"
+                name="delete-item"
+                id="<%=item._id %>"
+                value="Delete"
+                class="delete-single"
+              />
             </th>
           </tr>
           <% }) %>
@@ -75,6 +85,7 @@
             <th></th>
             <th></th>
             <th id="subtotal"></th>
+            <th></th>
           </tr>
           <tr>
             <th>Tax</th>
@@ -82,6 +93,7 @@
             <th></th>
             <th></th>
             <th id="tax"></th>
+            <th></th>
           </tr>
           <tr>
             <th>Total</th>
@@ -89,6 +101,7 @@
             <th></th>
             <th></th>
             <th id="total"></th>
+            <th></th>
           </tr>
         </tbody>
       </table>
