Updated Account page showing user info and events

--- a/views/shoppingcart.ejs
+++ b/views/shoppingcart.ejs
@@ -40,7 +40,6 @@
       <a href="/search" id="Searchpage"> Search </a>
       <a href="/timeline" id="Historypage"> Account </a>
       <a href="/shoppingcart"> Cart </a>
-      <a href="/logout"> Logout </a>
     </nav>
 
     <main>
@@ -107,7 +106,7 @@
       </table>
       <br />
       <div class="checkout">
-        <form action="">
+        <form action="/shoppingcart" method="POST">
           <input type="button" name="checkout" id="checkout" value="CheckOut" />
         </form>
       </div>
