--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -1,66 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment3</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/scripts/timeline.js"></script>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
     <style>
-        .history {
-            margin: 3px 3px;
-            padding: 1.5rem 0.5rem;
-            background-color: rgb(253, 253, 166);
-            border: rgb(128, 209, 187) 1px solid;
-            border-radius: 1rem;
-            box-shadow:
-                0 1.6px 1.6px rgba(0, 0, 0, 0.023),
-                0 3.8px 3.8px rgba(0, 0, 0, 0.034),
-                0 6.9px 6.9px rgba(0, 0, 0, 0.041),
-                0 11.4px 11.4px rgba(0, 0, 0, 0.049),
-                0 18.8px 18.8px rgba(0, 0, 0, 0.056),
-                0 32.8px 32.8px rgba(0, 0, 0, 0.067),
-                0 71px 71px rgba(0, 0, 0, 0.09);
-        }
+      .history {
+        margin: 3px 3px;
+        padding: 1.5rem 0.5rem;
+        background-color: rgb(253, 253, 166);
+        border: rgb(128, 209, 187) 1px solid;
+        border-radius: 1rem;
+        box-shadow: 0 1.6px 1.6px rgba(0, 0, 0, 0.023),
+          0 3.8px 3.8px rgba(0, 0, 0, 0.034), 0 6.9px 6.9px rgba(0, 0, 0, 0.041),
+          0 11.4px 11.4px rgba(0, 0, 0, 0.049),
+          0 18.8px 18.8px rgba(0, 0, 0, 0.056),
+          0 32.8px 32.8px rgba(0, 0, 0, 0.067), 0 71px 71px rgba(0, 0, 0, 0.09);
+      }
+      main {
+        display: grid;
+        grid-template-columns: auto auto auto;
+      }
+      .user-info {
+        margin: 3px 3px;
+        padding: 1.5rem 0.5rem;
+        background-color: rgb(243, 240, 240);
+        border: rgb(128, 209, 187) 1px solid;
+        border-radius: 1rem;
+        box-shadow: 0 1.6px 1.6px rgba(0, 0, 0, 0.023),
+          0 3.8px 3.8px rgba(0, 0, 0, 0.034), 0 6.9px 6.9px rgba(0, 0, 0, 0.041),
+          0 11.4px 11.4px rgba(0, 0, 0, 0.049),
+          0 18.8px 18.8px rgba(0, 0, 0, 0.056),
+          0 32.8px 32.8px rgba(0, 0, 0, 0.067), 0 71px 71px rgba(0, 0, 0, 0.09);
+        display: grid;
+        grid-template-rows: auto auto auto auto;
+        grid-template-columns: auto;
+      }
+      .prev-order {
+        margin: 3px 3px;
+        padding: 1.5rem 0.5rem;
+        background-color: rgb(254, 229, 229);
+        border: rgb(128, 209, 187) 1px solid;
+        border-radius: 1rem;
+        box-shadow: 0 1.6px 1.6px rgba(0, 0, 0, 0.023),
+          0 3.8px 3.8px rgba(0, 0, 0, 0.034), 0 6.9px 6.9px rgba(0, 0, 0, 0.041),
+          0 11.4px 11.4px rgba(0, 0, 0, 0.049),
+          0 18.8px 18.8px rgba(0, 0, 0, 0.056),
+          0 32.8px 32.8px rgba(0, 0, 0, 0.067), 0 71px 71px rgba(0, 0, 0, 0.09);
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <img src="./banner.jpeg" height="40%" alt="banner">
+      <img src="./banner.jpeg" height="40%" alt="banner" />
     </header>
     <nav>
-        <a href="/home" id="Homepage">
-            Home
-        </a>
-        <a href="/search" id="Searchpage">
-            Search
-        </a>
-        <a href="/timeline" id="Historypage">
-            Account
-        </a>
-        <a href="/shoppingcart">
-            Cart
-        </a>
-        <a href="/logout">
-            Logout
-        </a>
-
+      <a href="/home" id="Homepage"> Home </a>
+      <a href="/search" id="Searchpage"> Search </a>
+      <a href="/timeline" id="Historypage"> Account </a>
+      <a href="/shoppingcart"> Cart </a>
     </nav>
-    
+
     <main>
+      <div class="user-info">
+        <div>
+          <p>Your Profile:</p>
+        </div>
 
+        <div>
+          <p>Name: <%=details.firstname %></p>
+        </div>
+        <div>
+          <p>email: <%=details.email %></p>
+        </div>
+        <form action="/logout" method="POST">
+          <button>Logout</button>
+        </form>
+      </div>
+
+      <div class="historys">
+        <% if (allEvents.length === 0) { %>
+        <p>No Activity yet!</p>
+        <% } %> <% allEvents.forEach(event => { %>
+        <div class="history">
+          <p>Event - <span><%=event.text %></span></p>
+          <p>Time - <span><%=event.time %></span></p>
+          <button class="DeleteButton" id="<%=event._id %>">Delete</button>
+        </div>
+        <% }) %>
+      </div>
+
+      <div class="prev-order">
+        <div>
+          <p>Previous Orders</p>
+        </div>
+      </div>
     </main>
-</body>
+  </body>
 
-<footer>
-    <h5>
-        Copyright © Adam Website 2022
-    </h5>
-</footer>
+  <footer>
+    <h5>Copyright © Adam Website 2022</h5>
+  </footer>
 </html>
