Updated previous orders.ejs

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -27,12 +27,11 @@
         text-align: right;
       }
     </style>
-    <script src="/scripts/cart.js"></script>
   </head>
 
   <body>
     <header>
-      <img src="./banner.jpeg" height="40%" alt="banner" />
+      <img src="/banner.jpeg" height="40%" alt="banner" />
     </header>
 
     <nav>
@@ -65,11 +64,6 @@
           </tbody>
         </table>
         <br />
-        <div class="checkout">
-          <a href="/profile">
-            <button>Go Back</button>
-          </a>
-        </div>
       </form>
     </main>
 
