--- a/views/shoppingcart.ejs
+++ b/views/shoppingcart.ejs
@@ -110,6 +110,10 @@
           <input type="submit" name="checkout" id="checkout" value="CheckOut" />
         </div>
       </form>
+      <div class="prevorders">
+        <p>Previous Orders</p>
+        
+      </div>
     </main>
 
     <footer>
